# lego-store-availability

./: .gitignore  .pylintrc  README.md  dev-requirements.txt  setup.cfg  setup.py
.github/workflows/: package.yml
example/: brickheadz.py  config-cache-s3.yml  config.yml  main.py  new.py
lambda/: lambda_function.py
src/lego_store_availability/: Store.py  __init__.py  api.py  product.py  store.py
src/lego_store_availability/cache/: __init__.py  s3.py
tests/: test_product.py  test_store.py
tests/resources/: doctor-who-21304-FULL-IN.html  doctor-who-21304-FULL-OUT.html  doctor-who-21304-MISSING-AVAILABILITY.html  doctor-who-21304-MISSING-NAME.html
