[metadata]
name = lego-store-availability
version = 0.1.0
author = Lunik
author_email = lunik@tiwabbit.fr
description = Check the availability of Lego™ product in stores
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Lunik/lego-store-availability
project_urls =
    Bug Tracker = https://github.com/Lunik/lego-store-availability/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
